# android_memory_watch

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ttphoto/android/resources/watch/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ttphoto/android/resources/watch/: Config.kt  MainActivity.kt  MyApplication.kt  PermissionManager.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ttphoto/android/resources/watch/: ExampleUnitTest.kt
app_report_client/: build.gradle
app_report_client/src/androidTest/java/com/ttphoto/resource/watch/report/: ExampleInstrumentedTest.java
app_report_client/src/main/: AndroidManifest.xml
app_report_client/src/main/java/com/ttphoto/resource/watch/report/: AppWatch.kt  Report.kt  ReportClient.kt  UploadStatus.kt
app_report_client/src/main/res/values/: strings.xml
app_report_client/src/test/java/com/ttphoto/resource/watch/report/: ExampleUnitTest.java
app_watch_sdk/: build.gradle
app_watch_sdk/src/androidTest/java/com/ttphoto/resource/watch/sdk/: ExampleInstrumentedTest.java
app_watch_sdk/src/main/: AndroidManifest.xml
app_watch_sdk/src/main/aidl/com/ttphoto/resource/watch/sdk/: IAppResourceWatchClient.aidl  IAppResourceWatchService.aidl  IAppWatchClient.aidl  IAppWatchService.aidl
app_watch_sdk/src/main/cpp/: CMakeLists.txt
app_watch_sdk/src/main/cpp/anr/: trace_hook.cpp  trace_hook.h
app_watch_sdk/src/main/cpp/deadlock/: deadlock.cpp  deadlock.h
app_watch_sdk/src/main/cpp/hook/: got_hook.cpp  got_hook.h
app_watch_sdk/src/main/cpp/jni/: app_wartch_sdk.cpp  app_watch_sdk.cpp  app_watch_sdk.h  jni_utils.cpp  jni_utils.h
app_watch_sdk/src/main/cpp/opengl/: opengl_hook.cpp  opengl_hook.h
app_watch_sdk/src/main/cpp/support/: trace_hook.cpp  trace_hook.h
app_watch_sdk/src/main/cpp/utils/: utils.cpp  utils.h  utils_android.cpp  utils_linux.cpp
app_watch_sdk/src/main/java/com/ttphoto/resource/watch/sdk/: AppPerformanceInfo.java  AppResourceInfo.java  CPUInfo.java  IAppWatchCallback.java  LooperWatch.java  MemoryInfo.java  ProcessInfo.java  ProcessResourceInfo.java
app_watch_sdk/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+28 files in other folders)
